Add left margin to the stringWithTag tag Use findAllByProjectLocationOrderByBlockReference to ensure ordering of licence blocks is consistent Pass an empty list of blocks in ProjectLocationViewUtilTest Rename getSummary_noProjectInformation to getSummary_noProjectLocation in ProjectLocationSummaryServiceTest Add test to ProjectLocationViewUtilTest with ProjectLocation with no fields set Fix crash if ProjectLocation is null Wrap each licence block in a div instead of using <br>